<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addActivity4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bleu"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/Title"
            android:textColor="@color/black"
            android:textSize="50dp"
            android:textStyle="bold" />


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"

            app:cardCornerRadius="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/contact"
                    android:textColor="@color/black"
                    android:textSize="30dp" />

                <EditText
                    android:drawableStart="@drawable/baseline_phone_24"
                    android:id="@+id/EditTel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="10dp"
                    android:gravity="center_horizontal"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/Call"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/round2"
                    android:text="@string/phone_call"
                    android:textSize="20dp" />

                <EditText
                    android:drawableStart="@drawable/baseline_message_24"
                    android:id="@+id/EditSMS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="10dp"
                    android:gravity="center_horizontal"
                    android:hint="@string/sms_text"
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/Sms"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/round2"
                    android:text="@string/sms_button"
                    android:textSize="22dp" />

                <Button
                    android:id="@+id/Email"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"

                    android:layout_marginBottom="10dp"
                    android:background="@drawable/round2"
                    android:text="@string/email_button"
                    android:textSize="22dp" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>

</RelativeLayout>