<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bleu"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Title"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="50sp"
        android:layout_marginTop="25dp"
        android:gravity="center_horizontal"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"

        app:cardCornerRadius="30dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:orientation="vertical">

            <TextView
                android:textColor="@color/black"
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/please_enter_informations_below"
                />

            <EditText
                android:id="@+id/id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="30dp"
                android:textSize="20sp"
                android:hint="ID"

                />

            <EditText
                android:id="@+id/fname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:inputType="textPersonName"
                android:hint="@string/first_name"

                />

            <EditText
                android:id="@+id/lname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:inputType="textPersonName"
                android:hint="@string/last_name"

                />

            <EditText
                android:id="@+id/tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:inputType="phone"
                android:hint="@string/phone"

                />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/floatingActionButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="50dp"
                    android:clickable="true"

                    app:shapeAppearance="@style/circular"
                    app:srcCompat="@drawable/baseline_add_a_photo_24"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/btnadd"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/round2"
                    android:text="@string/add_employee"
                    android:textColor="@color/black"
                    android:textSize="18sp"

                    />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <TextView
        android:background="@color/white"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnadd"
        android:layout_gravity="center"
        android:text="@string/message"
        android:textSize="24sp"
        android:gravity="center_horizontal"  />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal">


        <Button

            android:id="@+id/btConsult"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnadd"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="0dp"
            android:background="@drawable/round"
            android:padding="10dp"
            android:text="@string/cunsult_Grid"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <Button
            android:id="@+id/btnConsult2"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/btConsult"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/round"
           android:padding="10dp"

            android:text="@string/cunsult_List"
            android:textColor="@color/black"
            android:textSize="17sp" />


    </LinearLayout>


</LinearLayout>