<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".addActivity3">

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="5dp"
        android:textSize="25sp"
        android:text="@string/page3"
        android:layout_marginTop="5dp"
        android:textStyle="normal"
        android:textColor="@color/black"
        />
    <androidx.cardview.widget.CardView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginLeft="125dp"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="60dp">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/bleu"

            android:src="@drawable/baseline_person_24" />

        <ImageButton
           app:shapeAppearance="@style/circular"
          android:id="@+id/floatingActionButton"
          android:layout_width="wrap_content"
           android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"

          android:layout_marginTop="90dp"
          android:clickable="true"
          app:srcCompat="@drawable/baseline_add_a_photo_24" />

    </androidx.cardview.widget.CardView>



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical">

            <EditText
                android:id="@+id/text11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/unique"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:textSize="25sp" />
            <EditText
                android:id="@+id/text22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/text33"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/text44"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:inputType="phone"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/text55"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"

                android:textSize="25sp" />



        </LinearLayout>



    </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnUpdate"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="25dp"
                    android:background="@drawable/round2"
                    android:text="@string/modify"
                    android:textColor="@color/black"
                    android:textSize="25dp" />

                <Button
                    android:id="@+id/btnDelete"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/round2"
                    android:text="@string/delete"
                    android:textColor="@color/black"
                    android:textSize="25dp" />
            </LinearLayout>

            <Button
                android:id="@+id/btnContact"
                android:layout_width="170dp"

                android:layout_height="wrap_content"
                android:layout_marginLeft="120dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/round2"
                android:text="@string/contacts"
                android:textColor="@color/black"
                android:textSize="25dp" />


        </LinearLayout>



</LinearLayout>