<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addActivity5">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bleu"
                android:orientation="vertical"
                >


                <TextView
                    android:background="@color/bleu"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:text="@string/Title"
                    android:textStyle="bold"
                    android:textSize="50dp"
                    android:layout_marginTop="40dp"
                    android:gravity="center"/>





                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="30dp"

                    app:cardCornerRadius="30dp">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="20dp"
                            android:orientation="vertical">
                                <TextView
                                    android:drawableEnd="@drawable/baseline_email_24"
                                    android:textColor="@color/black"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/send_email"
                                    android:drawablePadding="10dp"
                                    android:layout_gravity="center"
                                    android:textSize="30dp"
                                    />
                                <EditText
                                    android:id="@+id/send1"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="10dp"
                                    android:layout_marginTop="30dp"
                                    android:layout_marginRight="40dp"
                                    android:hint="@string/send"/>
                                <EditText
                                    android:id="@+id/send2"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="10dp"
                                    android:layout_marginTop="30dp"
                                    android:layout_marginRight="40dp"
                                    android:hint="@string/email_subject"/>
                                <EditText
                                    android:id="@+id/send3"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="10dp"
                                    android:layout_marginTop="30dp"
                                    android:layout_marginRight="40dp"
                                    android:layout_marginBottom="40dp"
                                    android:hint="@string/email_body"/>


                                <Button
                                    android:background="@drawable/round2"

                                    android:id="@+id/button"
                                    android:layout_width="200dp"
                                    android:layout_height="wrap_content"
                                    android:textSize="20sp"
                                    android:layout_gravity="center"
                                    android:layout_marginBottom="30dp"
                                    android:text="@string/email_button" />
                        </LinearLayout>
                </androidx.cardview.widget.CardView>




        </LinearLayout>











    </RelativeLayout>


